--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "fs": "^0.0.1-security",
+    "fs-extra": "^7.0.0",
     "inquirer": "^6.2.0",
     "path": "^0.12.7"
   }
